adicionando link no menu da geren. de producao

--- a/product_management.html
+++ b/product_management.html
@@ -69,6 +69,7 @@
                 <li><a href="product_registration.html" class="link-dark rounded">Cadastrar produtos</a></li>
                 <li><a href="production_registration.html" class="link-dark rounded">Cadastrar nova produção</a></li>
                 <li><a href="product_management.html" class="link-dark rounded">Gerenciar produtos</a></li>
+                <li><a href="production_management.html" class="link-dark rounded">Gerenciar produção</a></li>
               </ul>
             </div>
           </li>
