adc id dos input

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -179,43 +179,43 @@
                 <div class="form">
                   <div class="seller-date">
                     <label>Vendedor
-                      <input id="" type="text" placeholder=""/>
-                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                      <input id="seller" type="text" placeholder=""/>
+                      <p id="alerta_vendedor" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <label>Data
                       <input id="date" type="text" placeholder=""/>
-                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                      <p id="alerta_data" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
                   <div class="total-general">
                     <label>Total geral
                       <input id="total-general" type="text" placeholder=""/>
-                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                      <p id="alerta_totalgeral" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
                   <div class="product-type-quantity">
                     <label>Produto
-                      <input id="" type="text" placeholder=""/>
-                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                      <input id="product" type="text" placeholder=""/>
+                      <p id="alerta_produto" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <div class="type">
                       <label>Tipo
-                        <input id="" type="text" placeholder=""/>
-                        <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                        <input id="type" type="text" placeholder=""/>
+                        <p id="alerta_tipoproduto" style="display: none;">O Campo precisa ser preenchido</p>
                       </label>
                     </div>
                     <label>Quantidade
-                      <input id="" type="text" placeholder=""/>
-                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                      <input id="quantity" type="text" placeholder=""/>
+                      <p id="alerta_quantidade" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                     <div class="price-total">
                       <label>Preço unid.
-                        <input id="" type="text" placeholder=""/>
-                        <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                        <input id="price" type="text" placeholder=""/>
+                        <p id="alerta_precounidade" style="display: none;">O Campo precisa ser preenchido</p>
                       </label>
                       <label>Total
-                        <input id="" type="text" placeholder=""/>
-                        <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                        <input id="total" type="text" placeholder=""/>
+                        <p id="alerta_total" style="display: none;">O Campo precisa ser preenchido</p>
                         <span>Adicionar</span>
                       </label>
                     </div>
@@ -223,7 +223,7 @@
                   <div class="total-general-2">
                     <label>Total geral
                       <input id="total-general" type="text" placeholder=""/>
-                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                      <p id="alerta_totalgeral" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
                   <div class="register">
@@ -248,27 +248,27 @@
             <div class="form">
               <div class="discount-general">
                 <label>Desconto
-                  <input id="" type="text" placeholder=""/>
-                  <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                  <input id="discount" type="text" placeholder=""/>
+                  <p id="alerta_desconto" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
                 <div class="total-general" style="margin-top: 0; width: 100%;">
                 <label>Total geral
                   <input id="total-general" type="text" placeholder=""/>
-                  <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                  <p id="alerta_totalgeral" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
             </div>
             <div class="payment-value">
               <div class="payment">
                 <label>Forma de Pagamento
-                  <input id="" type="text" placeholder=""/>
-                  <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                  <input id="payment_method" type="text" placeholder=""/>
+                  <p id="alerta_formapagamento" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
               </div>
               <div class="total-value">
                 <label>Valor total
                   <input id="total-value" type="text" placeholder=""/>
-                  <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                  <p id="alerta_valortotal" style="display: none;">O Campo precisa ser preenchido</p>
                   <span>Adicionar</span>
                 </label>
               </div>
@@ -276,7 +276,7 @@
             <div class="total-general" style="width: 50%;">
               <label>Total geral
                 <input id="total-general" type="text" placeholder=""/>
-                <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                <p id="alerta_totalgeral" style="display: none;">O Campo precisa ser preenchido</p>
               </label>
             </div>
             <div class="total-paid">
