--- a/sale_registration.html
+++ b/sale_registration.html
@@ -228,7 +228,7 @@
                   </div>
                   <div class="register">
                     <div class="btn-group" style="width: 10%;">
-                      <button class="btn btn-primary" id="btn_cadastrar" type="button">></button>
+                      <button class="btn btn-primary" id="btn_setinha" type="button">></button>
                     </div>
                   </div>
               </div>
@@ -251,7 +251,7 @@
                   <input id="" type="text" placeholder=""/>
                   <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                 </label>
-                <div class="total-general" style="margin-top: 0; width: 100%;">
+                <div class="total-general">
                 <label>Total geral
                   <input id="total-general" type="text" placeholder=""/>
                   <p id="" style="display: none;">O Campo precisa ser preenchido</p>
@@ -287,7 +287,7 @@
             </div>
             <div class="register" style="justify-content: space-between;">
               <div class="btn-group" style="width: 10%;">
-                <button class="btn btn-primary" id="btn_cadastrar" type="button"><</button>
+                <button class="btn btn-primary" id="btn_setinha" type="button"><</button>
               </div>
               <div class="btn-group">
                 <button class="btn btn-primary" id="btn_cadastrar" type="button">CADASTRAR</button>
