--- a/sale_registration.html
+++ b/sale_registration.html
@@ -177,7 +177,7 @@
                   </div>
                 </div>
                 <div class="form">
-                  <div class="seller-date">
+                  <div class="seller-date" id="boxdate">
                     <label>Vendedor
                       <input id="seller" type="text" placeholder=""/>
                       <p id="alerta_vendedor" style="display: none;">O Campo precisa ser preenchido</p>
@@ -193,7 +193,7 @@
                       <p id="alerta_totalgeral" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
-                  <div class="product-type-quantity">
+                  <div class="product-type-quantity" id="boxproduct">
                     <label>Produto
                       <input id="product" type="text" placeholder=""/>
                       <p id="alerta_produto" style="display: none;">O Campo precisa ser preenchido</p>
@@ -246,7 +246,7 @@
               </div>
             </div>
             <div class="form">
-              <div class="discount-general">
+              <div class="discount-general" id="boxdiscount-general">
                 <label>Desconto
                   <input id="discount" type="text" placeholder=""/>
                   <p id="alerta_desconto" style="display: none;">O Campo precisa ser preenchido</p>
@@ -259,7 +259,7 @@
               </div>
             </div>
             <div class="payment-value">
-              <div class="payment">
+              <div class="payment" id="boxpayment">
                 <label>Forma de Pagamento
                   <input id="payment_method" type="text" placeholder=""/>
                   <p id="alerta_formapagamento" style="display: none;">O Campo precisa ser preenchido</p>
