aplicado resposividade na tela de cadastro de vendas

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -193,21 +193,23 @@
                       <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
                   </div>
-                  <div class="product-type-quantity">
-                    <label>Produto
-                      <input id="" type="text" placeholder=""/>
-                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
-                    </label>
-                    <div class="type">
-                      <label>Tipo
+                  <div class="p-t-q-p-t">
+                    <div class="product-type-quantity">
+                      <label>Produto
+                        <input id="" type="text" placeholder=""/>
+                        <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                      </label>
+                      <div class="type">
+                        <label>Tipo
+                          <input id="" type="text" placeholder=""/>
+                          <p id="" style="display: none;">O Campo precisa ser preenchido</p>
+                        </label>
+                      </div>
+                      <label>Quantidade
                         <input id="" type="text" placeholder=""/>
                         <p id="" style="display: none;">O Campo precisa ser preenchido</p>
                       </label>
                     </div>
-                    <label>Quantidade
-                      <input id="" type="text" placeholder=""/>
-                      <p id="" style="display: none;">O Campo precisa ser preenchido</p>
-                    </label>
                     <div class="price-total">
                       <label>Preço unid.
                         <input id="" type="text" placeholder=""/>
