--- a/home.html
+++ b/home.html
@@ -160,15 +160,15 @@
             <tbody>
               <tr>
                 <td class="space-TD-table"><img src="images/checked.png" alt="checado"></td>
-                <td></td>
+                <td>A encomenda de n° 21309 faltam 2 horas até o prazo limite para a entrega.</td>
               </tr>
               <tr>
-                <td></td>
-                <td>O produto {nome} de código {id} faltam 2 dias para a entrega.</td>
+                <td class="space-TD-table"><img src="images/checked.png" alt="checado"></td>
+                <td>A encomenda de n° 25312 faltam 2 dias até o prazo limite para a entrega.</td>
               </tr>
               <tr>
-                <td></td>
-                <td>O produto {nome} de código {id} faltam 3 dias para a entrega.</td>
+                <td class="space-TD-table"><img src="images/checked.png" alt="checado"></td>
+                <td>A encomenda de n° 98321 faltam 5 dias até o prazo limite para a entrega.</td>
               </tr>
             </tbody>
           </table>
@@ -182,23 +182,23 @@
             <tbody>
               <tr>
                 <td class="space-TD-table"><img src="images/danger-red.png" alt="alerta"></td>
-                <td>O produto {nome} de código {id} faltam 1 dias para a entrega.</td>
+                <td>A produção de n°9102120 faltam 1 dia para vencer a validade.</td>
               </tr>
               <tr>
                 <td class="space-TD-table"><img src="images/danger-orange.png" alt="alerta"></td>
-                <td>O produto {nome} de código {id} faltam 2 dias para a entrega.</td>
+                <td>A produção de n°1212120 faltam 2 dias para vencer a validade.</td>
               </tr>
               <tr>
                 <td class="space-TD-table"><img src="images/danger-yelow.png" alt="alerta"></td>
-                <td>O produto {nome} de código {id} faltam 3 dias para a entrega.</td>
+                <td>A produção de n°892120 faltam 3 dias para vencer a validade.</td>
               </tr>
               <tr>
                 <td class="space-TD-table"><img src="images/checked.png" alt="checado"></td>
-                <td>O produto {nome} de código {id} entregue com sucesso.</td>
+                <td>A produção de n°192120 faltam 15 dias para vencer a validade.</td>
               </tr>
               <tr>
                 <td class="space-TD-table"><img src="images/checked.png" alt="checado"></td>
-                <td>O produto {nome} de código {id} entregue com sucesso.</td>
+                <td>A produção de n°892191 faltam 20 dias para vencer a validade.</td>
               </tr>
             </tbody>
           </table>
