--- a/sale_registration.html
+++ b/sale_registration.html
@@ -198,7 +198,7 @@
                       <input id="product" type="text" placeholder=""/>
                       <p id="alerta_produto" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
-                    <div class="type">
+                    <div class="type" id="boxproduct">
                       <label>Tipo
                         <input id="type" type="text" placeholder=""/>
                         <p id="alerta_tipoproduto" style="display: none;">O Campo precisa ser preenchido</p>
@@ -208,7 +208,7 @@
                       <input id="quantity" type="text" placeholder=""/>
                       <p id="alerta_quantidade" style="display: none;">O Campo precisa ser preenchido</p>
                     </label>
-                    <div class="price-total">
+                    <div class="price-total" id="boxproduct">
                       <label>Preço unid.
                         <input id="price" type="text" placeholder=""/>
                         <p id="alerta_precounidade" style="display: none;">O Campo precisa ser preenchido</p>
@@ -220,7 +220,7 @@
                       </label>
                     </div>
                   </div>
-                  <div class="total-general-2">
+                  <div class="total-general-2" id="boxproduct">
                     <label>Total geral
                       <input id="total-general" type="text" placeholder=""/>
                       <p id="alerta_totalgeral" style="display: none;">O Campo precisa ser preenchido</p>
@@ -258,8 +258,8 @@
                 </label>
               </div>
             </div>
-            <div class="payment-value">
-              <div class="payment" id="boxpayment">
+            <div class="payment-value" id="boxpayment">
+              <div class="payment">
                 <label>Forma de Pagamento
                   <input id="payment_method" type="text" placeholder=""/>
                   <p id="alerta_formapagamento" style="display: none;">O Campo precisa ser preenchido</p>
@@ -273,13 +273,13 @@
                 </label>
               </div>
             </div>
-            <div class="total-general" style="width: 50%;">
+            <div class="total-general" style="width: 50%;" id="boxpayment">
               <label>Total geral
                 <input id="total-general" type="text" placeholder=""/>
                 <p id="alerta_totalgeral" style="display: none;">O Campo precisa ser preenchido</p>
               </label>
             </div>
-            <div class="total-paid">
+            <div class="total-paid" id="boxpayment">
               <label>Total pago
                 <input id="total-paid" type="text" placeholder=""/>
                 <p id="" style="display: none;">O Campo precisa ser preenchido</p>
