corrigindo inputs disable

--- a/production_management.html
+++ b/production_management.html
@@ -144,7 +144,7 @@
   <section class="content-table">
     <header class="bar-status">
       <div class="welcome">
-        <h1 id="hello">Usuários</h1>
+        <h1 id="hello">Produtos</h1>
       </div>
       <ul class="bar-login">
         <li id="usuario">
@@ -249,44 +249,44 @@
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title2">Editar Usuário</h5>
+                      <h5 class="modal-title2">Editar Produção</h5>
                       <button type="button" class="delete" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
                       <form>
                         <div class="user-email">
                           <label for="">Item
-                            <input id="item" type="text" placeholder="" disabled />
+                            <input id="item" type="text" placeholder="" />
                           </label>
                           <label for="">Lote
-                            <input id="lote" type="text" placeholder="" disabled />
+                            <input id="lote" type="text" placeholder="" />
                           </label>
                           <label for="">Funcionário
-                            <input id="funcionario" type="text" placeholder="" disabled />
+                            <input id="funcionario" type="text" placeholder="" />
                           </label>
                         </div>
                         <div class="user-email">
                           <label for="">Quantidade em Estoque
-                            <input id="qntEstoque" type="text" placeholder="" disabled />
+                            <input id="qntEstoque" type="text" placeholder="" />
                           </label>
                           <label for="">Quantidade Produzida
-                            <input id="qntProduzida" type="text" placeholder="" disabled />
+                            <input id="qntProduzida" type="text" placeholder="" />
                           </label>                          
                         </div>
                         <div class="user-email">
                           <label for="">Data de Produção
-                            <input id="dataProdução" type="text" placeholder="" disabled />
+                            <input id="dataProdução" type="text" placeholder="" />
                           </label>
                           <label for="">Data de Venciemento
-                            <input id="dataVenciemnto" type="text" placeholder="" disabled />
+                            <input id="dataVenciemnto" type="text" placeholder="" />
                           </label>                          
                         </div>
                         <div class="user-email">
                           <label for="">Prazo
-                            <input id="prazo" type="text" placeholder="" disabled />
+                            <input id="prazo" type="text" placeholder="" />
                           </label>                          
                           <label for="">Total da Produção
-                            <input id="totalProducao" type="text" placeholder="" disabled />
+                            <input id="totalProducao" type="text" placeholder="" />
                           </label>
                         </div>
                         <div class="save">
@@ -304,12 +304,12 @@
                 <div class="modal-dialog modal-dialog-centered">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title3">Deletar Usuário</h5>
+                      <h5 class="modal-title3">Deletar Produção</h5>
                       <button type="button" class="delete" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
                       <form>
-                        <h3>Tem certeza que deseja deletar o usuário?</h3>
+                        <h3>Tem certeza que deseja deletar a produção?</h3>
                         <div class="alternative">
                           <button type="button" class="btn btn-primary">SIM</button>
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">NÃO</button>
