criando arquivos, arrumando loading e fazendo backend

--- a/production_management.html
+++ b/production_management.html
@@ -23,6 +23,9 @@
 </head>
 
 <body>
+  <div class="loader">
+    <img src="images/833.gif" alt="Loading..." />
+  </div>
   <!-- <div id="teste"></div> -->
   <div class="content">
     <div id="home">
@@ -372,6 +375,8 @@
   </div>
   </div>
   </div>
+  <script src="script/preloader.js"></script>
+  <script type="module" src="script/production_management.js"></script>
   <script type="module" src="script/modal.js"></script>
 </body>
 
