EM ANDAMENTO - arrumando o backend da maioria das telas

--- a/product_management.html
+++ b/product_management.html
@@ -164,7 +164,7 @@
           <h2>Gerenciamento de produtos</h2>   
         </section>
 
-        <!--Tabela -> Gerenciamento de Usuarios-->
+        <!--Tabela -> Gerenciamento de Produtos-->
         <section class="section-table" >
           <table id="myTable" class="table">
             <thead>
@@ -175,7 +175,7 @@
                 </tr>
             </thead>
             <tbody id="tablebody"></tbody>
-        </table>       
+          </table>       
         </section>
       </section>
     </div>
