--- a/sale_management.html
+++ b/sale_management.html
@@ -928,6 +928,8 @@
   </div>
   </div>
   </div>
+  <script type="module" src="script/sale_management.js"></script>
+  <script src="script/preloader.js"></script>
   <script type="module" src="script/modal.js"></script>
 </body>
 
