--- a/sale_registration.html
+++ b/sale_registration.html
@@ -17,6 +17,9 @@
   <script src="script/database/database-connection.js"></script>
 </head>
 <body>
+  <div class="loader">
+    <img src="images/833.gif" alt="Loading..." />
+  </div>
   <div class="content">
     <div id="home">
     <div class="centro">
@@ -291,6 +294,7 @@
   </div>
 </div> 
 </div>
+<script src="script/preloader.js"></script>
 <script type="module" src="script/sale_registration.js"></script>
 </body>
 </html>
