ajustando selects Producao

--- a/production_registration.html
+++ b/production_registration.html
@@ -161,15 +161,28 @@
           <h2>Cadastro de Nova Produção</h2>
             <div class="form">
               <div class="name-tipe-batch">
-                <label>Nome
-                  <input id="name" type="text" placeholder=""/>
-                  <p id="alertaproduto" style="display: none;">O Campo precisa ser preenchido</p>
-                </label>
+                <div class="name">
+                  <label>Nome
+                    <select id="selectNomeProducao">
+                      <div>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                      </div>
+                    </select>
+                  </label>
+                </div>
                 <div class="tipe">
                   <label>Tipo
-                    <input id="tipe" type="text" placeholder=""/>
-                    <p id="alertatipoproduto" style="display: none;">O Campo precisa ser preenchido</p>
-                  </label>
+                    <select id="selectTipoProducao">
+                      <div>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                        <option value=""></option>
+                      </div>
+                    </select></label>
                 </div>
                 <div class="batch">
                   <label>Lote
