--- a/prop.html
+++ b/prop.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
+  <head>
         <meta charset="UTF-8" />
         <title>SysUnity</title>
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
@@ -15,13 +15,13 @@
         <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
         <script src="script/database/database-connection.js"></script>
-      </head>
-<body>
+  </head>
+  <body>
     <div class="loader">
         <img src="images/833.gif" alt="Loading..." />
     </div>
     <div class="content">
-        <div id="home">
+      <div id="home">
         <div class="centro">
           <section class="sidebar">
             <ul class="list-unstyled ps-0">
@@ -90,88 +90,98 @@
                 </div>
               </li>
               <div class="mb">
-                  <li class="mb-1">
-                    <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-                      <div class="set1">
-                        <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
-                        <li><a href="orders.html" class="link-dark rounded">Encomendas</a></li>
-                      </div>
-                    </button>
-                  </li>
-                  <li class="mb-1">
-                    <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-                      <div class="set1">
-                        <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
-                        <li><a href="historic.html" class="link-dark rounded">Histórico</a></li>
-                      </div>
-                    </button>
-                  </li>
-                  <li class="mb-1">
-                      <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-                      <div class="set1">
-                        <li><a href="settings.html" class="link-dark rounded">Configurações</a></li>
-                      </div>
+                <li class="mb-1">
+                  <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                    <div class="set1">
+                      <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
+                      <li><a href="orders.html" class="link-dark rounded">Encomendas</a></li>
+                    </div>
+                  </button>
+                </li>
+              </div>
+              <div class="mb">
+                <li class="mb-1">
+                  <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                    <div class="set1">
+                      <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
+                      <li><a href="historic.html" class="link-dark rounded">Histórico</a></li>
+                    </div>
+                  </button>
+                </li>
+              </div>
+              <div class="mb">
+                <li class="mb-1">
+                  <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                    <div class="set1">
                       <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
-                    </button>
-                  </li>
-                  <li class="mb-1">
-                    <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
-                      <div class="set1">
-                        <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
-                        <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
-                      </div>
-                    </button>
-                  </li>  
-        </ul>
-    </section>
+                      <li><a href="settings.html" class="link-dark rounded">Configurações</a></li>
+                    </div>
+                  </button>
+                </li>
+              </div>
+              <div class="mb">
+                <li class="mb-1">
+                  <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                    <div class="set1">
+                      <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
+                      <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
+                    </div>
+                  </button>
+                </li>
+              </div>  
+            </ul>
+          </section>
               
-    <!--Barra de alerta-->
-    <section class="content-table">
-        <header class="bar-status">
-            <div class="welcome">    
+          <!--Barra de alerta-->
+          <section class="content-table">
+            <header class="bar-status">
+              <div class="welcome">    
                 <h1 id="hello">Olá Taila,</h1>
                 <h1>seja bem-vinda(o)!</h1>
-            </div>
-            <ul class="bar-login">
+              </div>
+              <ul class="bar-login">
                 <li id="usuario">
-                <div class="btn-group">
+                  <div class="btn-group">
                     <button class="btn btn-secondary btn-lg dropdown-toggle . shadow-none " type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
-                        <h6 id="user">
-                            Taila Santos
-                        </h6>
+                      <img src="images/account_circle_black_36dp.svg" alt="" width="20%">
+                      <h6 id="user">
+                          Taila Santos
+                      </h6>
                     </button>
                     <ul class="dropdown-menu">
-                        <li>
-                            <a href="settings_user.html">Configurações
-                            <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="index.html">Sair
-                            <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
-                            </a> 
+                      <li>
+                        <a href="settings_user.html">Configurações
+                        <img src="images/baseline_settings_black_48dp.png" alt="" width="15%">
+                        </a>
+                      </li>
+                      <li>
+                        <a href="index.html">Sair
+                        <img src="images/baseline_logout_black_48dp.png" alt="" width="15%">
+                        </a> 
+                      </li>
+                    </ul>
+                  </div>
                 </li>
-            </ul>
-        </header>
+              </ul>
+            </header>
 
-        <div class="suporte">
-            <h2>Precisa de Ajuda?</h2>
-        </div>
+            <div class="suporte">
+                <h2>Precisa de Ajuda?</h2>
+            </div>
 
-        <div class="suporte2">
-            <div class="suportetexto">
+            <div class="suporte2">
+              <div class="suportetexto">
                 <p>Mediante a qualquer dúvida, referente ao nosso software, fale conosco por meio do email.</p>
                 <label for="">Email:</label>
                 <input type="email" name="" id="input_email" placeholder="sysunity@gmail.com" disabled>
-            </div>
-        </div>
-        
-    </section>    
-
-
+              </div>
+            </div>              
+          </section>   
+        </div> 
+      </div>   
+    </div> 
 
     <script src="script/preloader.js"></script>
     <script type="module" src="script/prop.js"></script>            
-</body>
+  </body>
 </html>
