corrigido redirecionamento de links no menu

--- a/sale_registration.html
+++ b/sale_registration.html
@@ -102,44 +102,46 @@
             </li>
             <div class="mb">
               <li class="mb-1">
-                <button class="btn btn-toggle align-items-center rounded collapsed shadow-none"
-                  data-bs-toggle="collapse" data-bs-target="collapse" aria-expanded="true">
+                <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
                   <div class="set1">
                     <img src="./images/baseline_local_shipping_white_48dp.png" alt="" width="22">
-              <li><a href="orders.html" class="link-dark rounded">Encomendas</a></li>
+                    <li><a href="orders.html" class="link-dark rounded">Encomendas</a></li>
+                  </div>
+                </button>
+              </li>
             </div>
-            </button>
-            </li>
-            <li class="mb-1">
-              <button class="btn btn-toggle align-items-center rounded collapsed shadow-none" data-bs-toggle="collapse"
-                data-bs-target="collapse" aria-expanded="true">
-                <div class="set1">
-                  <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
-            <li><a href="historic.html" class="link-dark rounded">Histórico</a></li>
-      </div>
-      </button>
-      </li>
-      <li class="mb-1">
-        <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse"
-          data-bs-target="collapse" aria-expanded="true">
-          <div class="set1">
-      <li><a href="settings.html" class="link-dark rounded">Configurações</a></li>
-    </div>
-    <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
-    </button>
-    </li>
-    <li class="mb-1">
-      <button class="btn btn-toggle align-items-center rounded collapsed  shadow-none" data-bs-toggle="collapse"
-        data-bs-target="collapse" aria-expanded="true">
-        <div class="set1">
-          <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
-    <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
-  </div>
-  </button>
-  </li>
-  </div>
-  </ul>
-  </section>
+            <div class="mb">
+              <li class="mb-1">
+                <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                  <div class="set1">
+                    <img src="./images/baseline_history_white_48dp.png" alt="" width="22">
+                    <li><a href="historic.html" class="link-dark rounded">Histórico</a></li>
+                  </div>
+                </button>
+              </li>
+            </div>
+            <div class="mb">
+              <li class="mb-1">
+                <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                  <div class="set1">
+                    <img src="./images/baseline_settings_white_48dp.png" alt="" width="22">
+                    <li><a href="settings.html" class="link-dark rounded">Configurações</a></li>
+                  </div>
+                </button>
+              </li>
+            </div>
+            <div class="mb">
+              <li class="mb-1">
+                <button class="btn btn-toggle align-items-center rounded collapsed shadow-none">
+                  <div class="set1">
+                    <img src="./images/baseline_help_center_white_48dp.png" alt="" width="22">
+                    <li><a href="prop.html" class="link-dark rounded">Suporte</a></li>
+                  </div>
+                </button>
+              </li>
+            </div>
+          </ul>
+        </section>
 
   <!--Barra de alerta-->
   <section class="content-table">
