finalizado tela de config_user

--- a/settings_user.html
+++ b/settings_user.html
@@ -190,8 +190,8 @@
                 </label> 
             </section>
             <section class="column-img-btn">
-                <section class="img-user">
-                    <img src="images/account_circle_black_36dp.svg" alt="" width="40%">
+                <section class="img-user-section">
+                    <img id="img-user" src="images/account_circle_black_36dp.svg" alt="">
                     <span>Alterar imagem</span>
                 </section>
                 <section class="register">
