adicionando no js, event para escolha de opcao

--- a/product_registration.html
+++ b/product_registration.html
@@ -189,7 +189,7 @@
         </div>
       </div>
       <div class="form">
-        <div class="name-tipe-value">
+        <div class="name-tipe-value" id="boxdate">
           <label for="">Nome
             <input id="name" type="text" placeholder="" />
             <p id="alertaproduto" style="display: none;">O Campo precisa ser preenchido</p>
@@ -207,12 +207,7 @@
             </label>
           </div>
         </div>
-        <div class="register">
-          <div class="btn-group">
-            <button class="btn btn-primary" id="btn_cadastrar" type="button">CADASTRAR</button>
-          </div>
-        </div>
-        <div class="name-tipe-value">
+        <div class="name-tipe-value" id="boxdate2">
           <div class="name">
             <label for="">Nome
               <select id="selectNameProduto">
