EM ANDAMENTO - trabalhando no backend das telas de venda

--- a/sale_management.html
+++ b/sale_management.html
@@ -190,7 +190,8 @@
             <th id="opcoes">Opções</th>
           </tr>
         </thead>
-        <tbody id="tablebody">
+        <tbody id="tablebody"></tbody>
+        <!-- <tbody id="tablebody">
           <tr>
             <td>01/08/21</td>
             <td>Taila</td>
@@ -920,7 +921,7 @@
                 data-bs-target="#MyModalDeletar"></button>
             </td>
           </tr>
-        </tbody>
+        </tbody> -->
       </table>
     </section>
   </section>
