trocando id do button

--- a/settings_user.html
+++ b/settings_user.html
@@ -196,7 +196,7 @@
                 </section>
                 <section class="register">
                     <div class="btn-group">
-                        <button class="btn btn-primary" id="btn_cadastrar" type="button"  data-bs-toggle="modal" data-bs-target="#checked">SALVAR</button>
+                        <button class="btn btn-primary" id="btn_salvar" type="button"  data-bs-toggle="modal" data-bs-target="#checked">SALVAR</button>
                     </div>
                 </section>
                 <div class="modal" id="checked" data-bs-backdrop="static">
